--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PokeBolt" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.PokeBolt" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -13,4 +13,27 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+
+
+    <style name="Widget.App.TabLayout" parent="Widget.MaterialComponents.TabLayout">
+        <item name="tabTextAppearance">@style/TextAppearance.App.Button</item>
+    </style>
+
+<!--    <style name="ThemeOverlay.App.TabLayout" parent="">-->
+<!--        <item name="colorPrimary">@color/shrine_pink_900</item>-->
+<!--        <item name="colorSurface">@color/shrine_pink_light</item>-->
+<!--        <item name="colorOnSurface">@color/shrine_pink_900</item>-->
+<!--    </style>-->
+
+    <style name="TextAppearance.App.Button" parent="TextAppearance.MaterialComponents.Button">
+        <item name="shapeAppearance">@style/TextAppearance.App.ButtonShape</item>
+    </style>
+
+    <style name="TextAppearance.App.ButtonShape" parent="ShapeAppearance.MaterialComponents.MediumComponent">
+
+        <item name="cornerRadius">18dp</item>
+        <item name="cornerFamily">cut</item>
+    </style>
+
 </resources>
