--- a/app/src/main/res/layout/basic_info_layout.xml
+++ b/app/src/main/res/layout/basic_info_layout.xml
@@ -62,15 +62,7 @@
                     app:layout_constraintStart_toEndOf="@+id/types_text"
                     app:layout_constraintTop_toBottomOf="@+id/level_text">
 
-                    <com.google.android.material.chip.Chip
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Grass" />
 
-                    <com.google.android.material.chip.Chip
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Poison" />
 
                 </com.google.android.material.chip.ChipGroup>
 
@@ -83,10 +75,11 @@
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="24dp"
                     android:text="Captured on XXX"
+                    android:id="@+id/captured_on_text"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/types_chip_group" />
+                    app:layout_constraintTop_toBottomOf="@+id/types_text" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
