--- a/app/src/main/res/layout/my_team_item.xml
+++ b/app/src/main/res/layout/my_team_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/friend_image"
+            android:id="@+id/pokemon_image"
             android:layout_width="108dp"
             android:layout_height="108dp"
             android:layout_marginStart="16dp"
@@ -28,10 +28,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="16dp"
             android:text="Name : Bulbasaur"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/friend_image"
+            app:layout_constraintStart_toEndOf="@+id/pokemon_image"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -40,22 +40,32 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="16dp"
             android:text="HP : 100/100"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/friend_image"
+            app:layout_constraintStart_toEndOf="@+id/pokemon_image"
             app:layout_constraintTop_toBottomOf="@+id/name_text" />
+
+        <TextView
+            android:id="@+id/type_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="Type : "
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/pokemon_image"
+            app:layout_constraintTop_toBottomOf="@+id/hp_text" />
 
         <TextView
             android:id="@+id/captured_at_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="24dp"
-            android:text="Captured at : May 10th 2021"
+            android:text="Captured at XXX"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/friend_image"
-            app:layout_constraintTop_toBottomOf="@+id/hp_text" />
+            app:layout_constraintStart_toEndOf="@+id/pokemon_image"
+            app:layout_constraintTop_toBottomOf="@+id/type_text" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
