--- a/app/src/main/res/layout/capture_info_layout.xml
+++ b/app/src/main/res/layout/capture_info_layout.xml
@@ -30,10 +30,11 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.gms.maps.MapView
-                android:id="@+id/location_map"
+            <fragment
+                android:id="@+id/map"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="24dp"
