--- a/app/src/main/res/layout/my_team_item.xml
+++ b/app/src/main/res/layout/my_team_item.xml
@@ -17,6 +17,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
+            android:transitionName="pokemonFrontTransition"
             android:src="@drawable/pokeball_pokemon_svgrepo_com"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
